@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1994, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1994, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -169,11 +169,11 @@ import jdk.internal.vm.annotation.IntrinsicCandidate;
  * </dd>
  *
  * <dt><i><a id=repEquivalence>representation equivalence</a></i>:</dt>
- * <dd>The two floating-point values represent the the same IEEE 754
+ * <dd>The two floating-point values represent the same IEEE 754
  * <i>datum</i>. In particular, for {@linkplain #isFinite(double)
  * finite} values, the sign, {@linkplain Math#getExponent(double)
- * exponent}, and significand components of the
- * floating-point values are the same. Under this relation:
+ * exponent}, and significand components of the floating-point values
+ * are the same. Under this relation:
  * <ul>
  * <li> {@code +0.0} and {@code -0.0} are distinguished from each other.
  * <li> every bit pattern encoding a NaN is considered equivalent to each other
@@ -1260,7 +1260,7 @@ public final class Double extends Number
      * of the integer value returned is the same as that of the
      * integer that would be returned by the call:
      * <pre>
-     *    new Double(d1).compareTo(new Double(d2))
+     *    Double.valueOf(d1).compareTo(Double.valueOf(d2))
      * </pre>
      *
      * @param   d1        the first {@code double} to compare
